# ttlive-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: curl-impersonate.cmake
demo/: main.cpp
include/ttlive/: client.hpp  events.hpp
js/: browser.sg.js  dw-index.js  hybrid-fake-dom.js  secsdk-lastest.umd.js  webmssdk.js  webmssdk_ex.js
proto/: tiktok.proto
src/: client.cpp  event_parser.cpp  event_parser.hpp  http_client.cpp  http_client.hpp  qjs_signer.cpp  qjs_signer.hpp  web_defaults.cpp  web_defaults.hpp  ws_client.cpp  ws_client.hpp
tools/: gen_proto.py
